--- a/app.html
+++ b/app.html
@@ -15,7 +15,7 @@
         <!-- Header -->
         <header class="container">
           <hgroup>
-            <h1>Csv sounds</h1>
+            <h1>Csv sounds (v0.0.1)</h1>
             <p>
                 <ul>
                     <li>
