--- a/app.html
+++ b/app.html
@@ -15,7 +15,7 @@
         <!-- Header -->
         <header class="container">
           <hgroup>
-            <h1>Csv sounds (v0.0.1)</h1>
+            <h1>Csv sounds (v0.0.2)</h1>
             <p>
                 <ul>
                     <li>
@@ -62,6 +62,9 @@
             </div>
         </main>
     <script>
+
+        const playButtonTemplate = '<button class="play">P</button>'
+
         const playTemplate = '<svg class="play-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-play" viewBox="0 0 16 16"><path d="M6 10.117V5.883a.5.5 0 0 1 .757-.429l3.528 2.117a.5.5 0 0 1 0 .858l-3.528 2.117a.5.5 0 0 1-.757-.43z"/> <path d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm0 1h8a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1"/></svg>'
 
         const micTemplate = '<svg id="mic-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-mic-fill" viewBox="0 0 16 16"> <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0z"/> <path d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5"/> </svg>'
@@ -268,7 +271,7 @@
                     console.log(sounds)
                 })
 
-                $(document).on("click", ".play-icon", function() {
+                $(document).on("click", ".play", function() {
                     const $tr = $(this).closest('tr')
                     currentCell[0] = $tr.index()
                     const $currentCell = $(this).closest("td")
@@ -285,7 +288,11 @@
                         // recording stopped, data ready
                         const $tr = $("tr").eq(currentCell[0])
                         const $td = $("td", $tr).eq(currentCell[1])
-                        $(playTemplate).appendTo($(".buttons", $td))
+                        if (isTouchScreen) {
+                            $(playButtonTemplate).appendTo($(".buttons", $td))
+                        } else {
+                            $(playTemplate).appendTo($(".buttons", $td))
+                        }
                         const word = $("span.word-container", $td).text().trim()
                         sounds[word] = [e.data]
                     });
